WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291060
Safari does not show beforeunload prompt when navigating cross site
https://bugs.webkit.org/show_bug.cgi?id=291060
Summary
Safari does not show beforeunload prompt when navigating cross site
Ryosuke Niwa
Reported
2025-04-03 23:31:47 PDT
Safari doesn't dispatch `beforeunload` event when process swap on navigation occurs. <
rdar://81710030
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-04-04 01:39:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43627
Ryosuke Niwa
Comment 2
2025-04-09 16:16:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43871
EWS
Comment 3
2025-04-10 10:08:12 PDT
Committed
293530@main
(495702b3cd07): <
https://commits.webkit.org/293530@main
> Reviewed commits have been landed. Closing PR #43871 and removing active labels.
Fujii Hironori
Comment 4
2025-04-10 13:04:48 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/43915
EWS
Comment 5
2025-04-10 13:07:05 PDT
Committed
293540@main
(ee4c68852505): <
https://commits.webkit.org/293540@main
> Reviewed commits have been landed. Closing PR #43915 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug