Source/WebCore/loader/FrameLoader.h
@@ -304,6 +304,7 @@ public:
     bool quickRedirectComing() const { return m_quickRedirectComing; }
 
     WEBCORE_EXPORT bool shouldClose();
+    MayNeedBeforeUnloadPrompt mayNeedBeforeUnloadPrompt();
 
     enum class PageDismissalType { None, BeforeUnload, PageHide, Unload };
     PageDismissalType pageDismissalEventBeingDispatched() const { return m_pageDismissalEventBeingDispatched; }
